[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-multi-agent"
version = "0.1.0"
authors = [
  { name = "A2A Team" },
]
description = "A Multi-Agent System using the Agent2Agent (A2A) protocol"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.9.0",
    "anthropic>=0.21.0",
    "crewai>=0.28.0",
    "fastapi>=0.110.0",
    "google-adk>=0.0.44",
    "gradio>=4.31.0",
    "httpx>=0.25.0",
    "langgraph>=0.0.33",
    "llama-index>=0.10.0",
    "openai>=1.13.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
]

[project.urls]
Homepage = "https://github.com/username/a2a-multi-agent"
Issues = "https://github.com/username/a2a-multi-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["agents", "common", "web_ui"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 